UI tests that stage updates intermittently fail TV runs or when ran with --verify on Linux
Categories
(Toolkit :: Application Update, defect)
Tracking
()
People
(Reporter: robert.strong.bugs, Assigned: robert.strong.bugs)
References
Details
Crash Data
Attachments
(2 files, 1 obsolete file)
| Assignee | ||
Comment 1•7 years ago
|
||
Push with failures without selected job
https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&revision=1293016267a73f6408b93c203e8b28242b2e2be6
| Assignee | ||
Comment 2•7 years ago
|
||
During TV1 runs this test appears to trigger bug 1388764.
https://taskcluster-artifacts.net/SCHLdVFRTxCDVTIsCiMPDQ/0/public/logs/live_backing.log
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Comment 3•7 years ago
|
||
I suspect that --verify runs with the staging tests is causing a crash so I disabled the staging tests from running verify in bug 599233
| Assignee | ||
Comment 4•7 years ago
|
||
So, the crash happened on autoland before the new tests for the about dialog made it to autoland. Bug 1520716
good times
| Assignee | ||
Comment 5•7 years ago
|
||
[task 2019-01-17T03:59:04.075Z] 03:59:04 INFO - GECKO(4818) | *** AUS:SVC Downloader:onStopRequest - attempting to stage update: App Update Test
[task 2019-01-17T03:59:04.106Z] 03:59:04 INFO - GECKO(4818) | Hit MOZ_CRASH(DOMEventTargetHelper not thread-safe) at /builds/worker/workspace/build/src/xpcom/base/nsISupportsImpl.cpp:40
[task 2019-01-17T03:59:04.113Z] 03:59:04 INFO - GECKO(4818) | #01: libxul.so + 0xc5f16e
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Comment 7•7 years ago
|
||
There have been several changes to the tests in the last week.
Try push
https://treeherder.mozilla.org/#/jobs?repo=try&revision=984db179f131691b14204e6cbb7ac19551d64acd
| Assignee | ||
Comment 9•7 years ago
|
||
First push had taskcluster issues... here is the second push
https://treeherder.mozilla.org/#/jobs?repo=try&revision=c7f5821e3c668ac2ca8fe417b87b98b7d2745d8d
| Assignee | ||
Comment 10•7 years ago
|
||
No failures on asan TV so far
4 failures out of the first 10 on opt TV. Triggered another 10 and no failures out of that 10.
| Assignee | ||
Comment 11•7 years ago
|
||
Remove skip-if's used to prevent running staging TV tests
| Assignee | ||
Updated•7 years ago
|
Updated•7 years ago
|
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Comment 12•7 years ago
|
||
Fixed by bug 1434033
Updated•7 years ago
|
Description
•