Bug 1520672 - UI tests that stage updates intermittently fail TV runs or when ran with --verify on Linux